Subpage development, scss mixins added

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto:400,500&display=swap&subset=latin-ext"
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/2b64842583.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
